--- a/dist.css
+++ b/dist.css
@@ -568,40 +568,38 @@ video {
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
+@media (min-width: 768px) {
+  .boardSq {
+    height: 3rem;
+    width: 3rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .boardSq {
+    height: 3.5rem;
+    width: 3.5rem;
+  }
+}
+
+.ship img {
+  width: 3rem;
+}
+
 .absolute {
   position: absolute;
 }
 
-.bottom-8 {
-  bottom: 2rem;
-}
-
-.top-48 {
-  top: 12rem;
+.top-8 {
+  top: 2rem;
 }
 
 .left-12 {
   left: 3rem;
 }
 
-.top-36 {
-  top: 9rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.bottom-48 {
-  bottom: 12rem;
-}
-
-.bottom-24 {
-  bottom: 6rem;
-}
-
-.m-4 {
-  margin: 1rem;
+.bottom-2 {
+  bottom: 0.5rem;
 }
 
 .mt-8 {
@@ -624,6 +622,18 @@ video {
   display: none;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
 .w-auto {
   width: auto;
 }
@@ -636,12 +646,16 @@ video {
   width: 6rem;
 }
 
-.w-48 {
-  width: 12rem;
+.w-2 {
+  width: 0.5rem;
 }
 
-.w-36 {
-  width: 9rem;
+.w-8 {
+  width: 2rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .flex-col {
@@ -658,10 +672,6 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .rounded-lg {
@@ -692,14 +702,14 @@ video {
   background-color: rgb(125 211 252 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -708,10 +718,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-12 {
-  padding: 3rem;
 }
 
 .p-8 {
@@ -732,14 +738,14 @@ video {
   line-height: 2rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-semibold {
@@ -771,31 +777,17 @@ video {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
-.text-slate-700 {
+.text-sky-700 {
   --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
+  color: rgb(3 105 161 / var(--tw-text-opacity));
 }
 
-.backdrop-invert {
-  --tw-backdrop-invert: invert(100%);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-@media (min-width: 1024px) {
-  .lg\:top-24 {
-    top: 6rem;
+@media (min-width: 768px) {
+  .md\:bottom-8 {
+    bottom: 2rem;
   }
 
-  .lg\:left-12 {
-    left: 3rem;
-  }
-
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:flex {
-    display: flex;
+  .md\:w-36 {
+    width: 9rem;
   }
 }
